spacing bug fix

--- a/client/src/css/People.css
+++ b/client/src/css/People.css
@@ -70,7 +70,7 @@
     display: flex;
     flex-direction: row;
     .relation-list{
-      flex: 1 0 50%;
+      flex: 1 0 1px;
       h3{
         text-transform: capitalize;
         margin: 0;
